--- a/src/assets/styles/_mixins.sass
+++ b/src/assets/styles/_mixins.sass
@@ -8,3 +8,8 @@
     display: flex
     justify-content: center
     align-items: center
+
+@mixin flexJustify($alignDirection)
+    display: flex
+    justify-content: center
+    align-items: $alignDirection
